Change file structure in modules.

--- a/index.html
+++ b/index.html
@@ -23,9 +23,17 @@
   <script src="app/bower_components/html5-boilerplate/dist/js/vendor/modernizr-2.8.3.min.js"></script>
   <script src="app/bower_components/angular/angular.js"></script>
   <script src="app/bower_components/angular-route/angular-route.js"></script>
+
+  <!-- Angular Components -->
   <script src="app/app.js"></script>
-  <script src="app/components/register/register.js"></script>
-  <script src="app/components/login/login.js"></script>
+  <script src="app/components/register/registerController.js"></script>
+  <script src="app/components/login/loginController.js"></script>
+  <script src="app/components/profile/profileController.js"></script>
+  <script src="app/components/measurements/measurementController.js"></script>
+  <script src="app/components/bills/billController.js"></script>
+
+  <!-- Angular Config file -->
+  <script src="app/shared/config.js"></script>
 
   <!-- JS Libs import -->
   <script src="assets/libs/jquery-1.10.1.min.js"></script>
