--- a/index.html
+++ b/index.html
@@ -9,51 +9,46 @@
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
-  <!-- File imports -->
-  <link href="assets/libs/bootstrap.css" rel="stylesheet">
-  <link href="assets/css/Main.css" rel="stylesheet">
-  <link href="assets/libs/font/css/fontello.css" rel="stylesheet">
-  <link href='http://fonts.googleapis.com/css?family=Droid+Sans:400,700' rel='stylesheet' type='text/css'>
-  <link rel="stylesheet" href="app/bower_components/html5-boilerplate/dist/css/normalize.css">
-  <link rel="stylesheet" href="app/bower_components/html5-boilerplate/dist/css/main.css">
-  <link rel="stylesheet" href="assets/css/Login.css">
-  <link rel="stylesheet" href="assets/css/Register.css">
-
-  <!-- JS Components imports -->
-  <script src="app/bower_components/html5-boilerplate/dist/js/vendor/modernizr-2.8.3.min.js"></script>
-  <script src="app/bower_components/angular/angular.js"></script>
-  <script src="app/bower_components/angular-route/angular-route.js"></script>
-
-  <!-- Angular Components -->
-  <script src="app/app.js"></script>
-  <script src="app/components/register/registerController.js"></script>
-  <script src="app/components/login/loginController.js"></script>
-  <script src="app/components/profile/profileController.js"></script>
-  <script src="app/components/measurements/measurementController.js"></script>
-  <script src="app/components/bills/billController.js"></script>
-
-  <!-- Angular Config file -->
-  <script src="app/shared/config.js"></script>
-
-  <!-- JS Libs import -->
-  <script src="assets/libs/jquery-1.10.1.min.js"></script>
-  <script src="assets/libs/bootstrap.min.js"></script>
-
 </head>
 <body>
-<div class="navbar">
-  <div class="navbar-inner">
-    <div class="container"> <a class="btn btn-navbar" data-toggle="collapse" data-target=".nav-collapse"> <span class="icon-bar"></span> <span class="icon-bar"></span> <span class="icon-bar"></span> </a>
-      <ul class="nav nav-collapse pull-right">
-        <li><a href="#/register"><i class="icon-user"></i> Register</a></li>
-        <li><a href="#/login"><i class="icon-trophy"></i>Login</a></li>
-      </ul>
-      <div class="nav-collapse collapse"></div>
-    </div>
+  <div ng-include src="'app/shared/components/navbar/navbar.html'"></div>
+  <div class="container login">
+    <div ng-view></div>
   </div>
-</div>
-<div class="container login">
-  <div ng-view></div>
-</div>
 </body>
+
+<!-- File imports -->
+<link href="assets/libs/bootstrap.css" rel="stylesheet">
+<link href="assets/css/Main.css" rel="stylesheet">
+<link href="assets/libs/font/css/fontello.css" rel="stylesheet">
+<link href='http://fonts.googleapis.com/css?family=Droid+Sans:400,700' rel='stylesheet' type='text/css'>
+<link rel="stylesheet" href="app/bower_components/html5-boilerplate/dist/css/normalize.css">
+<link rel="stylesheet" href="app/bower_components/html5-boilerplate/dist/css/main.css">
+<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.6.3/css/font-awesome.min.css">
+<link rel="stylesheet" href="assets/css/Login.css">
+<link rel="stylesheet" href="assets/css/Register.css">
+<link rel="stylesheet" href="assets/css/Profile.css">
+
+<!-- Bower Components imports -->
+<script src="app/bower_components/html5-boilerplate/dist/js/vendor/modernizr-2.8.3.min.js"></script>
+<script src="app/bower_components/angular/angular.js"></script>
+<script src="app/bower_components/angular-route/angular-route.js"></script>
+<link href="app/bower_components/angular-xeditable/dist/css/xeditable.css" rel="stylesheet">
+<script src="app/bower_components/angular-xeditable/dist/js/xeditable.js"></script>
+
+<!-- Angular Components -->
+<script src="app/app.js"></script>
+<script src="app/components/register/registerController.js"></script>
+<script src="app/components/login/loginController.js"></script>
+<script src="app/components/profile/profileController.js"></script>
+<script src="app/components/measurements/measurementController.js"></script>
+<script src="app/components/bills/billController.js"></script>
+<script src="app/shared/components/navbar/navbarCtrl.js"></script>
+
+<!-- Angular Config file -->
+<script src="app/shared/config.js"></script>
+
+<!-- JS Libs import -->
+<script src="assets/libs/jquery-1.10.1.min.js"></script>
+<script src="assets/libs/bootstrap.min.js"></script>
 </html>
