--- a/index.html
+++ b/index.html
@@ -32,6 +32,7 @@
 <!-- Bower Components imports -->
 <script src="app/bower_components/html5-boilerplate/dist/js/vendor/modernizr-2.8.3.min.js"></script>
 <script src="app/bower_components/angular/angular.js"></script>
+<script src="app/bower_components/angular-cookies/angular-cookies.js"></script>
 <script src="app/bower_components/angular-route/angular-route.js"></script>
 <link href="app/bower_components/angular-xeditable/dist/css/xeditable.css" rel="stylesheet">
 <script src="app/bower_components/angular-xeditable/dist/js/xeditable.js"></script>
@@ -44,6 +45,7 @@
 <script src="app/components/profile/profileController.js"></script>
 <script src="app/components/measurements/measurementController.js"></script>
 <script src="app/components/bills/billController.js"></script>
+<script src="app/components/login/loginService.js"></script>
 <script src="app/shared/components/navbar/navbarCtrl.js"></script>
 
 <!-- Angular Config file -->
