--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
 <script src="app/shared/components/navbar/navbarCtrl.js"></script>
 
 <!-- Angular Config file -->
-<script src="app/shared/config.js"></script>
+<script src="app/shared/routes.js"></script>
 
 <!-- JS Libs import -->
 <script src="assets/libs/jquery-1.10.1.min.js"></script>
